[Fix]: Minor fixes and gap to sidebar

--- a/frontend/src/components/ProfileCards/ProfileCards.module.scss
+++ b/frontend/src/components/ProfileCards/ProfileCards.module.scss
@@ -12,6 +12,10 @@
 	
 	& .GroupDetails{
 		width: calc(100% - 33px);
+		display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+		
 		& .GroupNameAndNotification{
 			font-size: 14px;
 			color: black;
